# A_guinea_pig_for_deep_learning_with_many_classes

./: .gitattributes  .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt  setup.bat  setup_venv_bash.sh  setup_venv_powershell.bat
data/saved_models/same_parameter/: accuracy.pt  loss.pt
data/saved_models/same_parameter_real_optimized_function/: accuracy.pt  loss.pt  true_loss_v1.pt  true_loss_v2.pt
data/saved_models/same_parameter_real_optimized_function_wd_hight/: accuracy.pt  loss.pt  true_loss_v1.pt  true_loss_v2.pt
data/saved_models/same_parameter_real_optimized_function_wd_low/: accuracy.pt  loss.pt  true_loss_v1.pt  true_loss_v2.pt
notebooks/: Courbes.ipynb  View_Courbe.ipynb  curves_process.ipynb  curves_process_val.ipynb  multinomial_logistic_regression_training.ipynb  multinomial_logistic_regression_training_multiple_weight_decay.ipynb  multinomial_logistic_regression_training_multiple_weight_decay_V2.ipynb  penultimate_layer_outputs_saving.ipynb  penultimate_layer_saving.ipynb
notebooks/.ipynb_checkpoints/: View_Courbe-checkpoint.ipynb  multinomial_logistic_regression_training-checkpoint.ipynb  penultimate_layer_saving-checkpoint.ipynb  pretrained_resnet_test-checkpoint.ipynb  test_DA-checkpoint.ipynb
notebooks/tests/: Test_2.ipynb  test_DA.ipynb
notebooks/trash/: View_Courbe.ipynb  test_multinomial_logistic_regression_training_multiple_weight_decay.ipynb
rapport/: main.tex  references.bib
tests/: Test_21.ipynb
tests/.ipynb_checkpoints/: Test_2-checkpoint.ipynb  Test_21-checkpoint.ipynb
(+133 files in other folders)
