[tool.poetry]
name = "tx-env"
version = "0.1.0"
description = ""
authors = ["AlexisDeseure <98423557+AlexisDeseure@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.7"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.2"
kaggle = "^1.6.4"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
